--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,7 +35,8 @@ main img {
 }
 
 aside {
-    width: 100px;
+    width: 2100.
+    px;
     margin: 10px;
     border: 1px dotted rgb(255, 127, 80/.3);
     padding: 15 px #fff;
