--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,20 @@
+:root {
+    --heading-background-color: rgb(35, 35, 144);
+    --heading-text-color: rgb(166, 194, 195);
+    --padding: 15px;
+    --border: 2px solid black;
+    --box-shadow: 0 0 30px gray;
+}
 nav {
-    background-color: darkblue;
-    padding: 10px;
+    background-color: var(--heading-background-color);
+    text-emphasis-color: var(--heading-text-color);
+    padding: var(--padding);
 }
 
 nav a {
     color: white;
     display: block;
-    padding: 20px;
+    padding: var(--padding);
 }
 
 h1 {
@@ -16,13 +24,13 @@ h1 {
 img {
     width: 150 px;
     height: auto;
-    border: 1px solid black;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
+    border: var(--border);
+    padding: var(--padding);
+    box-shadow: var(--box-shadow);
 }
 
 p {
-    padding: 0;
+    padding: var(--padding);
 }
 
 main {
@@ -38,8 +46,8 @@ aside {
     width: 2100.
     px;
     margin: 10px;
-    border: 1px dotted rgb(255, 127, 80/.3);
-    padding: 15 px #fff;
+    border: var(--border);
+    padding: var(--padding), #fff;
     background-color: rgb(166, 194, 195);
     color: rgb(75, 73, 64);
     text-align: center;
@@ -53,6 +61,6 @@ aside img {
 
 footer {
     margin-top: 10px gray;
-    border-top: 15px solid rgb(154, 205, 50);
+    border-top: 15px solid rgb(96, 8, 33);
     text-align: center;
 }
