--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,13 @@
     --border: 2px solid black;
     --box-shadow: 0 0 30px gray;
 }
+
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
 nav {
     background-color: var(--heading-background-color);
     text-emphasis-color: var(--heading-text-color);
@@ -19,6 +26,7 @@ nav a {
 
 h1 {
     color: darkblue;
+    /* float: right; */
 }
 
 img {
@@ -27,6 +35,7 @@ img {
     border: var(--border);
     padding: var(--padding);
     box-shadow: var(--box-shadow);
+    /* float: right; */
 }
 
 p {
@@ -40,17 +49,18 @@ main {
 main img {
     width: 150px;
     height: auto;
+    float: right;
 }
 
 aside {
-    width: 2100.
-    px;
-    margin: 10px;
+    width: 210px;
+    /* margin: 10px;
     border: var(--border);
     padding: var(--padding), #fff;
     background-color: rgb(166, 194, 195);
-    color: rgb(75, 73, 64);
+    color: rgb(75, 73, 64); */
     text-align: center;
+   
 
 }
 
@@ -59,8 +69,22 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+    position: absolute;
+    top: 47 px;
+    left: 150px;
+}
 footer {
     margin-top: 10px gray;
     border-top: 15px solid rgb(96, 8, 33);
     text-align: center;
+}
+
+/*Class Selectors*/
+.box{
+    margin: 1rem;
+    border: 2px dotted;
+    padding: 1rem;
+    background-color: darkseagreen;
+    color: aliceblue;
 }
