--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -32,7 +32,7 @@ main {
     color: var(--accent3-color);
     /* text-shadow: 3px 5px var(--accent2-color); */
     position: absolute;
-    top: 770px;
+    top: 430px;
     margin: 50px;
     padding: 15px;
     background-color: var(--accent1-color)
@@ -54,12 +54,9 @@ main {
 
 .hero article {
     position: absolute;
-    top: 950px;
+    top: 590px;
     width: 770px;
     height: 550px;
-
-    /* float: right; */
-
     font: var(--secondary-color) var(--primary-font);
 
 }
@@ -76,7 +73,7 @@ p {
     width: 75%;
     margin: 30px;
     background-color: var(--accent3-color);
-    /* position: float; */
+    
 
 }
 
@@ -89,16 +86,7 @@ p {
     position: relative;
 }
 
-/* .stats { */
-/* position: absolute; */
-/* bottom: 25px;
-    left: 25px;
-    background: (var(--primary-color), var(--secondary-color));
-    border: 1px solid var(--accent3-color);
-    padding: 0.65rem;
-    box-shadow: 0 0 30px var(--secondary-color);
-    opacity: 0.9; */
-/* } */
+
 
 h2 {
     text-shadow: 0 0 15px var(--accent1-color);
@@ -119,6 +107,42 @@ footer p {
 
 header {
     width: 800px;
+    background-color: var(--primary-color);
+    display: grid;
+    grid-template-columns: 15% 15% 70%;
+    grid-template-rows: 40% 20% 40%;
+}
+
+header img {
+    padding-top: 30;
+    
+    margin: 0;
+    width: 117px;
+    grid-template-rows: 100%;
+    grid-column: 2;
+    
+    
+}
+header nav {
+    margin: 0;
+    padding: 0;
+    width: auto;
+    background-color: var(--accent3-color);
+    /* padding: 5px;
+    margin: 10px; */
+    grid-column: 3; 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 2;
+     grid-row-end:3; 
+    grid-template-areas: ;
+    font: var(--accent2-color);
+    grid-template-rows: 30%;
+
 }
 
 body {
