--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -26,12 +26,14 @@ main {
 }
 
 .hero h1 {
+
     text-align: center;
     font-size: 1.5rem;
     font-family: var(--secondary-font);
     color: var(--accent3-color);
     /* text-shadow: 3px 5px var(--accent2-color); */
     position: absolute;
+
     top: 430px;
     margin: 50px;
     padding: 15px;
@@ -73,26 +75,84 @@ p {
     width: 75%;
     margin: 30px;
     background-color: var(--accent3-color);
-    
 
+
+}
+
+.history {
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 20% 80%;
+    /* display: flex; */
+    /* align-items: flex-start; */
+    /* justify-items: space-between;
+    flex-wrap: wrap; */
+}
+
+.history h2 {
+    grid-column-start: 2;
+    display: flex;
+    justify-content: center;
+
+}
+
+.history img {
+    width: 200px;
+    display: grid;
+    grid-row-start: 2;
+    grid-column-start: 2;
+    /* grid-area: 2/2/3/3;
+    /* align-self: baseline; */
 }
 
 .history p {
-
     position: relative;
+    grid-row-start: 2;
+    /* grid-area: 2/1/3/2; */
+    /* align-items: baseline; */
 }
 
 .adventure section {
-    position: relative;
+    /* position: relative; */
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 20% 80%;
+    justify-content: flex-end;
+
+
 }
 
-
+.rowofimages {
+    display: flex;
+}
 
 h2 {
+    /* Adventure awaits you */
     text-shadow: 0 0 15px var(--accent1-color);
     border-bottom: 1px solid var(--accent2-color);
     margin-bottom: 0.3rem;
     position: relative;
+    grid-column-start: 2;
+    display: flex;
+    justify-content: center;
+}
+
+.adventure img {
+    width: 18%;
+    /* position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 20% 80%;
+    grid-row-start: 2;
+    grid-area: 2/1/3/6; */
+    /* display: flex;
+    flex-direction: row; */
+
+
+}
+
+figcaption {
+    width: 18%;
 }
 
 a footer {
@@ -115,14 +175,15 @@ header {
 
 header img {
     padding-top: 30;
-    
+
     margin: 0;
     width: 117px;
     grid-template-rows: 100%;
     grid-column: 2;
-    
-    
+
+
 }
+
 header nav {
     margin: 0;
     padding: 0;
@@ -130,15 +191,15 @@ header nav {
     background-color: var(--accent3-color);
     /* padding: 5px;
     margin: 10px; */
-    grid-column: 3; 
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    grid-column: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
-     grid-row-end:3; 
+    grid-row-end: 3;
     grid-template-areas: ;
     font: var(--accent2-color);
     grid-template-rows: 30%;
