--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -4,7 +4,7 @@
     --accent1-color: #177e89;
     --accent2-color: #324948;
     --accent3-color: #EDEEE8;
-    --main-font: "bad script", Arial, sans-serif;
+    --primary-font: "bad script", Arial, sans-serif;
     --secondary-font: "Edu QLD Beginner", Geneva, serif;
 
 }
@@ -12,77 +12,106 @@
 * {
     margin: 15px;
     padding: 5px;
-    border: 10px;
-    color: var(--accent1-color);
+    border: 3px;
+    border-color: var(--secondary-color);
 }
 
+body {
+    width: 800px;
+    height: auto;
+}
 
 main {
     color: var(--primary-color);
     margin: 2rem auto;
     font-family: var(--primary-font);
     /* position: relative; */
-    width: 800px;
+    /* width: 800px; */
 }
 
-.hero h1 {
+.herodiv {
+    /* margin: 10px auto; */
+    position: relative;
+    width: 100%;
 
-    text-align: center;
-    font-size: 1.5rem;
+    /* object-fit: cover; */
+    /* display: block; */
+    /* opacity: .6; */
+
+    /* padding: 10px; */
+    /* float: right; */
+}
+
+
+
+/* .company{
+    float
+} */
+
+.hero {
+    display: block;
+    width: 100%;
+    height: auto;
+    /* float: right; */
+    opacity: .7;
+}
+
+.herodiv h1 {
+
+    /* text-align: center; */
+    /* font-size: 1.5rem; */
     font-family: var(--secondary-font);
     color: var(--accent3-color);
     /* text-shadow: 3px 5px var(--accent2-color); */
     position: absolute;
 
-    top: 430px;
-    margin: 50px;
-    padding: 15px;
+    top: 10%;
+    left: 30%;
+    right: 30%;
+    /* margin: 50px;
+    padding: 15px; */
     background-color: var(--accent1-color)
 }
 
-.hero div {
-    margin: 10px auto;
-    position: relative
-}
-
-.rapids {
-    width: 100%;
-    height: auto;
-    object-fit: cover;
-    display: block;
-    opacity: .6;
-    position: relative;
-}
-
-.hero article {
+article {
     position: absolute;
-    top: 590px;
-    width: 770px;
-    height: 550px;
+    top: 25%;
+    /* bottom: 30%; */
+    /* float: right; */
+    /* width: 770px;
+    height: 550px; */
     font: var(--secondary-color) var(--primary-font);
+}
 
+article p {
+    border-style: solid;
+    background-color: var(--accent1-color);
+    width: 60%;
 }
 
 .employee {
-    position: relative;
-    width: 150px;
-    height: auto;
-    float: right;
+    position: absolute;
+    /* top: 20%; */
+    width: 200px;
+    right: 0%;
 }
 
-p {
-    position: absolute;
+.history p {
+    /* position: absolute; */
+    clear: both;
+    top: 25%;
+    bottom: 25%;
     width: 75%;
-    margin: 30px;
+    /* margin: 30px; */
     background-color: var(--accent3-color);
 
 
 }
 
 .history {
-    display: grid;
+    /* display: grid;
     grid-template-columns: 2fr 1fr 2fr;
-    grid-template-rows: 20% 80%;
+    grid-template-rows: 20% 80%; */
     /* display: flex; */
     /* align-items: flex-start; */
     /* justify-items: space-between;
@@ -90,61 +119,62 @@ p {
 }
 
 .history h2 {
-    grid-column-start: 2;
+    /* grid-column-start: 2;
     display: flex;
-    justify-content: center;
+    justify-content: center; */
 
 }
 
 .history img {
-    width: 200px;
+    /* width: 200px;
     display: grid;
     grid-row-start: 2;
-    grid-column-start: 2;
+    grid-column-start: 2; */
     /* grid-area: 2/2/3/3;
     /* align-self: baseline; */
 }
 
 .history p {
-    position: relative;
-    grid-row-start: 2;
+    /* position: relative; */
+    /* grid-row-start: 2; */
     /* grid-area: 2/1/3/2; */
     /* align-items: baseline; */
 }
 
 .adventure section {
     /* position: relative; */
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 20% 80%;
     justify-content: flex-end;
+    font: var(--secondary-font) */
 
 
 }
 
 .rowofimages {
-    display: flex;
+    /* display: flex; */
 }
 
 h2 {
     /* Adventure awaits you */
-    text-shadow: 0 0 15px var(--accent1-color);
+    /* text-shadow: 0 0 15px var(--accent1-color);
     border-bottom: 1px solid var(--accent2-color);
-    margin-bottom: 0.3rem;
-    position: relative;
-    grid-column-start: 2;
+    margin-bottom: 0.3rem; */
+    /* position: relative; */
+    /* grid-column-start: 2;
     display: flex;
-    justify-content: center;
+    justify-content: center; */
 }
 
 .adventure img {
-    width: 100%;
+    /* width: 100%; */
     /* position: relative;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 20% 80%;
     grid-row-start: 2;
-    grid-area: 2/1/3/6; */
+    grid-area: 2/1/30/6; */
     /* display: flex;
     flex-direction: row; */
 
@@ -152,18 +182,16 @@ h2 {
 }
 
 figcaption {
-    width: 18%;
+    /* width: 18%; */
 }
 
-a footer {
-    text-decoration: none;
-    padding: 15px;
-}
+/* a {}
 
 footer p {
     margin: 10px;
     position: relative;
-}
+
+} */
 
 header {
     width: 800px;
@@ -189,14 +217,15 @@ header nav {
     padding: 0;
     width: auto;
     background-color: var(--accent3-color);
+    */
     /* padding: 5px;
     margin: 10px; */
-    grid-column: 3;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    /* grid-column: 3;
+    display: flex; */
+    /* align-items: center;
+    justify-content: center; */
 
-    grid-column-start: 3;
+    /* grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
@@ -206,16 +235,22 @@ header nav {
 
 }
 
-body {
-    width: 800px;
-}
+
 
 footer {
-    margin: 1rem;
+    /* margin: 1rem;
     border-top: 1px solid var(--primary-color);
     padding: .5rem;
     color: var(--accent3-color);
     font-weight: 700;
     font-style: var(--primary-font);
-    width: 800px;
+    width: 800px; */
+    /* text-decoration: none; */
+    /* padding: 15px; */
+}
+
+footer p {}
+
+footer nav a {
+    text-decoration: none;
 }
