--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -66,8 +66,8 @@ main {
     position: absolute;
 
     top: 10%;
-    left: 30%;
-    right: 30%;
+    left: 18%;
+    right: 18%;
     /* margin: 50px;
     padding: 15px; */
     background-color: var(--accent1-color)
@@ -75,25 +75,30 @@ main {
 
 article {
     position: absolute;
-    top: 25%;
+    top: 33%;
+    left: 10%;
+    right: 10%;
+    border-style: solid;
+    background-color: var(--accent1-color);
     /* bottom: 30%; */
     /* float: right; */
     /* width: 770px;
     height: 550px; */
-    font: var(--secondary-color) var(--primary-font);
+    color: var(--accent3-color );
 }
 
 article p {
-    border-style: solid;
-    background-color: var(--accent1-color);
-    width: 60%;
+    font-family: var(--accent3-color);
+    text-wrap: balance;
+    
 }
 
 .employee {
     position: absolute;
-    /* top: 20%; */
-    width: 200px;
+    top: 0px;
+    width: 110px;
     right: 0%;
+    opacity: .8;
 }
 
 .history p {
@@ -101,7 +106,7 @@ article p {
     clear: both;
     top: 25%;
     bottom: 25%;
-    width: 75%;
+    
     /* margin: 30px; */
     background-color: var(--accent3-color);
 
@@ -202,9 +207,9 @@ header {
 }
 
 header img {
-    padding-top: 30;
+    padding-top: 30px;
 
-    margin: 0;
+    margin: 0px;
     width: 117px;
     grid-template-rows: 100%;
     grid-column: 2;
@@ -213,8 +218,8 @@ header img {
 }
 
 header nav {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     width: auto;
     background-color: var(--accent3-color);
     */
