--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -29,7 +29,7 @@ main {
     /* width: 800px; */
 }
 
-.herodiv {
+.hero {
     /* margin: 10px auto; */
     position: relative;
     width: 100%;
@@ -48,7 +48,7 @@ main {
     float
 } */
 
-.hero {
+.heropic {
     display: block;
     width: 100%;
     height: auto;
@@ -56,7 +56,7 @@ main {
     opacity: .7;
 }
 
-.herodiv h1 {
+.hero h1 {
 
     /* text-align: center; */
     /* font-size: 1.5rem; */
@@ -95,10 +95,11 @@ article p {
 }
 
 .employee {
-    position: absolute;
-    top: 0px;
+    /* position: absolute; */
+    float: right;
+    /* top: 0px; */
     width: 110px;
-    right: 0%;
+    /* right: 0%; */
     opacity: .8;
 }
 
